Rename files by coursework section for clarity

--- a/main,.ipynb
+++ b/main,.ipynb
@@ -88,7 +88,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%run ./bert.ipynb"
+    "%run ./experiment3.ipynb"
    ]
   },
   {
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "f52d3589",
    "metadata": {},
    "outputs": [
@@ -128,7 +128,7 @@
     }
    ],
    "source": [
-    "!python token_classification.py"
+    "!python host_model.py"
    ]
   }
  ],
