Update main.ipynb to include names of each part

--- a/main,.ipynb
+++ b/main,.ipynb
@@ -13,7 +13,7 @@
    "id": "d4a1f17e",
    "metadata": {},
    "source": [
-    "Members:<br>\n",
+    "Members:\n",
     "- 6889747 Yi Zeng\n",
     "- 6794870 Haodong Li\n",
     "- 6893621 Terry Szeto\n",
@@ -25,7 +25,9 @@
    "id": "7a29e7a5",
    "metadata": {},
    "source": [
-    "# Analysis Of The Dataset"
+    "# Analysis Of The Dataset\n",
+    "By Olushola Olateju<br>\n",
+    "Running the notebook individually is recommended"
    ]
   },
   {
@@ -34,14 +36,17 @@
    "id": "8e032ffd",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "%run ./dataset_analysis.ipynb"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "47c8643e",
    "metadata": {},
    "source": [
-    "# Experiment 1\n",
+    "# Experiment 1 And 2\n",
+    "By Yi Zeng and Haodong Li<br>\n",
     "Running the notebook individually is recommended"
    ]
   },
@@ -52,25 +57,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%run ./word2vec&glove_LSTM.ipynb"
+    "%run ./experiment1&2.ipynb"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6fafac72",
-   "metadata": {},
-   "source": [
-    "# Experiment 2\n",
-    "Running the notebook individually is recommended"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "020402ee",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -78,6 +66,7 @@
    "metadata": {},
    "source": [
     "# Experiment 3\n",
+    "By Terry Szeto<br>\n",
     "Running the notebook individually is recommended"
    ]
   },
@@ -97,6 +86,7 @@
    "metadata": {},
    "source": [
     "# Hosting The Model\n",
+    "By Terry Szeto<br>\n",
     "Running the python code directly is recommended since there may be command line input to select local model"
    ]
   },
