Add comment about BERT+transformer

--- a/main.ipynb
+++ b/main.ipynb
@@ -47,7 +47,8 @@
    "source": [
     "# Experiment 1 And 2\n",
     "By Yi Zeng and Haodong Li<br>\n",
-    "Running the notebook individually is recommended"
+    "Running the notebook individually is recommended<br>\n",
+    "Please see experiment 3 for the results of BERT+transformer"
    ]
   },
   {
